improve: migrate message format to MiniMessage and some cleanup
- Remove ConfigAPI and TranslationLoader
  - Instead, use messages-minimessage for handling localized messages
  - messages-minimessage is provided by Box
- Remove ShadowJar
- Use Box's ItemEditor for creating GUI icons