@@ -1,10 +1,12 @@
 package net.okocraft.boxtradestick;
 
+import com.github.siroshun09.messages.minimessage.source.MiniMessageSource;
 import io.papermc.paper.event.player.PlayerPurchaseEvent;
 import io.papermc.paper.event.player.PlayerTradeEvent;
 import java.util.ArrayList;
 import java.util.List;
 import it.unimi.dsi.fastutil.objects.Object2IntArrayMap;
+import net.kyori.adventure.text.Component;
 import net.okocraft.box.api.BoxAPI;
 import net.okocraft.box.api.model.item.BoxItem;
 import net.okocraft.box.api.util.InventoryUtil;
@@ -22,7 +24,7 @@ public final class TradeProcessor {
         return villager.getRecipeCount() < TradeStickData.MAXIMUM_INDEX;
     }
 
-    public static int processSelectedOffersForMaxUses(@NotNull Player trader, @NotNull AbstractVillager villager) {
+    public static int processSelectedOffersForMaxUses(@NotNull Player trader, @NotNull MiniMessageSource messageSource, @NotNull AbstractVillager villager) {
         int[] recipeIndices = TradeStickData.loadFrom(villager).getSelectedIndices(trader.getUniqueId());
 
         if (recipeIndices.length == 0) {
@@ -41,21 +43,21 @@ public final class TradeProcessor {
 
         if (results.isEmpty()) {
             trader.playSound(villager, Sound.ENTITY_VILLAGER_NO, 1, 1);
-            trader.sendActionBar(Translatables.OUT_OF_STOCK);
+            trader.sendActionBar(Languages.RECIPE_OUT_OF_STOCK.create(messageSource));
             return 0;
         }
 
-        trader.playSound(villager, Sound.ENTITY_VILLAGER_TRADE, 1, 1);
+        Component message;
 
         if (results.size() == 1) {
-            TradeResult result = results.get(0);
-            trader.sendActionBar(Translatables.RESULT_TIMES.apply(result.count, result.recipe.getResult()));
+            TradeResult result = results.getFirst();
+            message = Languages.RESULT_TIMES.apply(result.count, result.recipe.getResult(), result.recipe.getResult().getAmount() * result.count).create(messageSource);
         } else {
-            trader.sendActionBar(Translatables.MULTIPLE_RESULT_TIMES.apply(
-                    results.stream().mapToInt(TradeResult::count).sum(),
-                    results.size()
-            ));
+            message = Languages.MULTIPLE_RESULT_TIMES.apply(results.stream().mapToInt(TradeResult::count).sum(), results.size()).create(messageSource);
         }
+
+        trader.playSound(villager, Sound.ENTITY_VILLAGER_TRADE, 1, 1);
+        trader.sendActionBar(message);
 
         return results.size();
     }
@@ -140,7 +142,7 @@ public final class TradeProcessor {
 
         if (stockHolder.decreaseIfPossible(ingredientMap, cause)) {
             var resultBukkit = merchantOffer.getResult();
-            var result = BoxUtil.getBoxItem(resultBukkit);
+            var result = BoxAPI.api().getItemManager().getBoxItem(resultBukkit);
             if (result.isEmpty()) {
                 int remaining = InventoryUtil.putItems(trader.getInventory(), resultBukkit, resultBukkit.getAmount());
 
